--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "mini-message-board",
   "version": "0.0.0",
   "private": true,
+  "engines": { "node": "14.16.0" },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "dev": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,5 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
